[gd_scene load_steps=12 format=2]

[ext_resource path="res://Art/MC_2_Idle.png" type="Texture" id=1]
[ext_resource path="res://Networking/LoginMenu.gd" type="Script" id=2]
[ext_resource path="res://JG/TopDownIso/CharaAnimatorISO.gd" type="Script" id=3]
[ext_resource path="res://Player.gd" type="Script" id=4]
[ext_resource path="res://icon.png" type="Texture" id=5]
[ext_resource path="res://JG/Movement/MoveInputReader.gd" type="Script" id=6]
[ext_resource path="res://Art/MC.tres" type="Resource" id=7]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 160, 160 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 160, 160 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 320, 0, 160, 160 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 6.0
} ]

[node name="Game" type="Node2D"]

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
script = ExtResource( 4 )
anim_sets = [ ExtResource( 7 ) ]

[node name="Camera2D" type="Camera2D" parent="KinematicBody2D"]
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="IsoCharaAnimator" type="Node2D" parent="KinematicBody2D"]
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="KinematicBody2D"]
position = Vector2( 0, -50 )
frames = SubResource( 4 )
frame = 2
playing = true

[node name="MoveInputReader" type="Node2D" parent="KinematicBody2D"]
script = ExtResource( 6 )

[node name="LoginMenu" type="CanvasLayer" parent="."]
script = ExtResource( 2 )

[node name="LoginContainer" type="Container" parent="LoginMenu"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -54.0
margin_right = 146.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="LoginMenu/LoginContainer"]
margin_right = 143.0
margin_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="LoginMenu/LoginContainer"]
margin_left = 0.891891
margin_top = 28.541
margin_right = 141.892
margin_bottom = 48.541
text = "Login"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Status" type="Label" parent="LoginMenu"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 1.33484
margin_top = -100.726
margin_right = 138.335
margin_bottom = -52.7261
text = "Not Logged In"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="Sprite" parent="."]
position = Vector2( 123.228, -80.2441 )
texture = ExtResource( 5 )
[connection signal="text_changed" from="LoginMenu/LoginContainer/LineEdit" to="LoginMenu" method="_on_LineEdit_text_changed"]
[connection signal="button_up" from="LoginMenu/LoginContainer/Button" to="LoginMenu" method="_on_Button_button_up"]
